# shelf

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/shelf/: __init__.py  __main__.py  cli.py  display.py  engine.py  models.py  schema.py  storage.py  sync.py
tests/: test_cli.py  test_display.py  test_engine.py  test_integration.py  test_models.py  test_schema.py  test_storage.py  test_sync.py
