[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shelf"
version = "0.1.0"
description = "CRDT-powered collaborative database for the terminal"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Zanden Kane" },
]
dependencies = [
    "pycrdt>=0.12",
    "click>=8.0",
    "rich>=13.0",
    "pydantic>=2.0",
    "msgpack>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.4",
]

[project.scripts]
shelf = "shelf.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/shelf"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
